spade-tests/src/snapshots/spade_tests__const_generics__int_literal_in_trait_bound_rhs.snap
---
source: spade-tests/src/const_generics.rs
---
trait X {}
fn test<T: 1>() {}


error: Unexpected `integer`, expected `Identifier`
  ┌─ testinput:2:12
  │
2 │ fn test<T: 1>() {}
  │            ^ expected `Identifier`
